Cleaned up some old configurations and datasets ; minor updated in SimulationAnalysis to make it possible to plot the Volume to I/O time scatter plot for simulation data

--- a/results/.gitignore
+++ b/results/.gitignore
@@ -7,3 +7,4 @@ exp_configurations/exp_config_*
 exp_configurations/theta_config_*
 exp_datasets/theta2022_*
 full_plot.svg
+run_calibration_parallel_moo.py
