--- a/configs/theta_config.yml
+++ b/configs/theta_config.yml
@@ -11,7 +11,6 @@ general:
   config_version: 0.0.1
   max_stripe_size: 100048576          # Max size for allocation stripes (in bytes) (when striping is done at CSS level, so not used here)
   preload_percent: 0.0
-  amdahl: 0.5                         # From 0 to 1, degree of // in compute tasks
   walltime_extension: 1.0             # The final walltime passed to the batch sched will be walltime * walltime_extension
 network:
   bandwidth_backbone: 9TBps
@@ -26,10 +25,6 @@ storage:
   non_linear_coef_write: 0.75
   nb_files_per_read: 2
   nb_files_per_write: 2
-  io_read_node_ratio: 0.1
-  max_read_node_cnt: 20
-  io_write_node_ratio: 0.1
-  max_write_node_cnt: 20
   io_buffer_size: 536870912B
   read_bytes_preload_thres: 1000000000 # Not doing copy *in* if job reads more than 1GB
   write_bytes_copy_thres:   2000000000 # Not doing copy *out* if job writes more than 2GB
@@ -83,8 +78,12 @@ lustre:
   lq_prio_free: 232       # lustre default
   max_nb_ost: 2000        # lustre limit
   stripe_size: 268435456  # Default size of each read / write before switching to another stripe on a different OST (from https://www.alcf.anl.gov/sites/default/files/2022-08/CompPerfWorkshopq_May2022_IOopt_mcpheeters.pdf)
-  stripe_count: 4         # Default number of OSTs used for each IO operation
-  max_chunks_per_ost: 12  # Maximum number of file parts / allocation chunks on each OSTs (not a Lustre parameter, but used to speed up simulation at the cost of precision)
+  max_chunks_per_ost: 22
+  stripe_count: 1
+  stripe_count_high_read_add: 2
+  stripe_count_high_thresh_read: 231004494
+  stripe_count_high_thresh_write: 264290989
+  stripe_count_high_write_add: 2
 outputs:
   job_filename_prefix: simulatedJobs_
   io_actions_prefix: io_actions_ts_
