--- a/configs/test_configs/lustre_config_3OSS_3OST.yml
+++ b/configs/test_configs/lustre_config_3OSS_3OST.yml
@@ -26,10 +26,8 @@ storage:
   non_linear_coef_write: 0.5
   nb_files_per_read: 2
   nb_files_per_write: 2
-  io_read_node_ratio: 0.1
-  max_read_node_cnt: 20
-  io_write_node_ratio: 0.1
-  max_write_node_cnt: 20
+  read_node_thres: 50000000
+  write_node_thres: 40000000
   io_buffer_size: 1GB
   read_bytes_preload_thres: 100000000
   write_bytes_copy_thres:  2000000000
