--- a/configs/test_configs/lustre_config_hdd.yml
+++ b/configs/test_configs/lustre_config_hdd.yml
@@ -27,7 +27,8 @@ storage:
   nb_files_per_read: 4
   nb_files_per_write: 2
   max_read_node_cnt: 20
-  max_write_node_cnt: 20
+  read_node_thres: 50000000
+  write_node_thres: 40000000
   io_buffer_size: 1GB
   read_bytes_preload_thres: 10000000000
   write_bytes_copy_thres: 15000000001
