--- a/results/exp_configurations/theta_config.yml
+++ b/results/exp_configurations/theta_config.yml
@@ -11,7 +11,6 @@ general:
   config_version: 0.0.1
   max_stripe_size: 100048576          # Max size for allocation stripes (in bytes) (when striping is done at CSS level, so not used here) - Fixed
   preload_percent: 0                  # 
-  amdahl: 0.5                         # From 0 to 1, degree of // in compute tasks
   walltime_extension: 1.0             # The final walltime passed to the batch sched will be walltime * walltime_extension - Fixed
 network:
   bandwidth_backbone: 9TBps
@@ -22,14 +21,12 @@ network:
 storage:
   read_variability: 1.0               # read AND write set to 1.0 to deactivate
   write_variability: 1.0
-  non_linear_coef_read: 0.85          # read AND write set to 1.0 to deactivate
-  non_linear_coef_write: 0.75
+  non_linear_coef_read:  9         # read AND write set to 1.0 to deactivate
+  non_linear_coef_write: 12
   nb_files_per_read: 2
   nb_files_per_write: 2
-  io_read_node_ratio: 0.3
-  max_read_node_cnt: 28               # Fixed
-  io_write_node_ratio: 0.3
-  max_write_node_cnt: 28              # Fixed
+  read_node_threshold: 200_000_000
+  write_node_threshold: 180_000_000
   io_buffer_size: 268435456B
   read_bytes_preload_thres: 0  # Not doing copy *in* if job reads more than 1GB - Fixed
   write_bytes_copy_thres:   0  # Not doing copy *out* if job writes more than 2GB - Fixed
