--- a/results/exp_configurations/theta_config.yml
+++ b/results/exp_configurations/theta_config.yml
@@ -25,12 +25,12 @@ storage:
   non_linear_coef_write: 12
   nb_files_per_read: 2
   nb_files_per_write: 2
-  read_node_threshold: 200_000_000
-  write_node_threshold: 180_000_000
+  read_node_thres: 20_000_000
+  write_node_thres: 18_000_000
   io_buffer_size: 268435456B
   read_bytes_preload_thres: 0  # Not doing copy *in* if job reads more than 1GB - Fixed
   write_bytes_copy_thres:   0  # Not doing copy *out* if job writes more than 2GB - Fixed
-  cleanup_threshold: 0.45               # Threshold for adding or not cleanup action to a job - Fixed 
+  cleanup_threshold: 0.45      # Threshold for adding or not cleanup action to a job - Fixed 
   disk_templates:
     - &raid_OSS
       id: raid_OSS
@@ -72,8 +72,8 @@ dragonfly:          # See https://simgrid.org/doc/latest/Platform_examples.html 
     enabled: no     # Not implemented yet anyway - Fixed
     nb_disks: 1     
     capacity: 128 # GB
-    read_bw: 1000 # MBps      # https://docs.alcf.anl.gov/data-management/filesystem-and-storage/file-systems/
-    write_bw: 500 # MBps      # https://www.alcf.anl.gov/sites/default/files/2022-08/CompPerfWorkshop_May2022_IOopt_mcpheeters.pdf
+    read_bw: 2500 # MBps      # https://docs.alcf.anl.gov/data-management/filesystem-and-storage/file-systems/
+    write_bw: 2000 # MBps      # https://www.alcf.anl.gov/sites/default/files/2022-08/CompPerfWorkshop_May2022_IOopt_mcpheeters.pdf
 allocator: lustre
 lustre:
   lq_threshold_rr: 43     # lustre default  - Fixed
