--- a/configs/test_configs/lustre_config_base.yml
+++ b/configs/test_configs/lustre_config_base.yml
@@ -30,6 +30,8 @@ storage:
   io_buffer_size: 1GB
   read_bytes_preload_thres: 100000000
   write_bytes_copy_thres:  2000000000
+  static_read_overhead_seconds: 0
+  static_write_overhead_seconds: 0
   cleanup_threshold: 0.0
   disk_templates:
     - &raid_OSS
