--- a/configs/test_configs/lustre_config_hdd.yml
+++ b/configs/test_configs/lustre_config_hdd.yml
@@ -29,6 +29,8 @@ storage:
   max_read_node_cnt: 20
   read_node_thres: 50000000
   write_node_thres: 40000000
+  static_read_overhead_seconds: 0
+  static_write_overhead_seconds: 0
   io_buffer_size: 1GB
   read_bytes_preload_thres: 10000000000
   write_bytes_copy_thres: 15000000001
