--- a/configs/test_configs/lustre_config_het_oss.yml
+++ b/configs/test_configs/lustre_config_het_oss.yml
@@ -27,6 +27,8 @@ storage:
   nb_files_per_write: 2
   read_node_thres: 50000000
   write_node_thres: 40000000
+  static_read_overhead_seconds: 0
+  static_write_overhead_seconds: 0
   io_buffer_size: 1GB
   read_bytes_preload_thres: 100000000
   write_bytes_copy_thres:  2000000000
