--- a/configs/theta_config_574382.yml
+++ b/configs/theta_config_574382.yml
@@ -33,6 +33,8 @@ storage:
   io_buffer_size: 536870912B
   read_bytes_preload_thres: 1000000000 # Not doing copy *in* if job reads more than 1GB
   write_bytes_copy_thres:   2000000000 # Not doing copy *out* if job writes more than 2GB
+  static_read_overhead_seconds: 0
+  static_write_overhead_seconds: 0
   cleanup_threshold: 0.75
   disk_templates:
     - &raid_OSS
