--- a/results/exp_configurations/theta_config.yml
+++ b/results/exp_configurations/theta_config.yml
@@ -25,8 +25,10 @@ storage:
   non_linear_coef_write: 12
   nb_files_per_read: 2
   nb_files_per_write: 2
-  read_node_thres: 20_000_000
-  write_node_thres: 18_000_000
+  read_node_thres: 20000000
+  write_node_thres: 18000000
+  static_read_overhead_seconds: 0
+  static_write_overhead_seconds: 0
   io_buffer_size: 268435456B
   read_bytes_preload_thres: 0  # Not doing copy *in* if job reads more than 1GB - Fixed
   write_bytes_copy_thres:   0  # Not doing copy *out* if job writes more than 2GB - Fixed
