Updating the code to fix incompatibilities with WRENCH 2.5 ; starting to write a new CMakeLists.txt in order to be able to build everything from source seamlessly.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,15 +15,34 @@ endif ()
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/CMakeModules/")
 
+# Default to release build
 if(NOT CMAKE_BUILD_TYPE)
-    set(CMAKE_BUILD_TYPE Debug)
+    set(CMAKE_BUILD_TYPE Release)
 endif()
 
 find_package(SimGrid REQUIRED)
 find_package(Boost REQUIRED)
 
+if (DEFINED FSMOD_PATH)
+    if (NOT EXISTS "${FSMOD_PATH}")
+        message(FATAL_ERROR "The specified FSMOD_PATH doesn't exit")
+    else()
+        file(GLOB LIBFSMOD_FILES
+                "${FSMOD_PATH}/liblibfsmod.so"
+                "${FSMOD_PATH}/lib/libfsmod.dylib"
+                )
+        if (NOT LIBFSMOD_FILES)
+            message(FATAL_ERROR "The specified FSMOD_PATH doesn't seem to contain a valid FSMod installation")
+        else()
+            set(CMAKE_PREFIX_PATH ${FSMOD_PATH} ${CMAKE_PREFIX_PATH})
+        endif()
+    endif()
+endif()
+#find_package(FSMod REQUIRED)
+
+
 # include directories for dependencies and WRENCH libraries
-include_directories(include/ /usr/local/include /opt/local/include /opt/local/include/simgrid /usr/local/include/wrench ${SimGrid_INCLUDE_DIR} ${Boost_INCLUDE_DIR})
+include_directories(include/ /usr/local/include /opt/local/include /opt/simgrid/include /usr/local/include/wrench ${SimGrid_INCLUDE_DIR} ${Boost_INCLUDE_DIR})
 
 # source files
 set(SOURCE_FILES
@@ -48,6 +67,7 @@ set(SOURCE_FILES
 find_library(WRENCH_LIBRARY NAMES wrench)
 find_library(YAML_CPP_LIBRARY NAMES yaml-cpp)
 find_library(ZMQ_LIBRARY NAMES zmq)
+find_library(FSMOD_LIBRARY NAMES fsmod)
 
 # generating the executable
 set(CMAKE_CXX_STANDARD 17)
@@ -59,12 +79,14 @@ if (ENABLE_BATSCHED)
             ${SimGrid_LIBRARY}
             ${ZMQ_LIBRARY}
             ${YAML_CPP_LIBRARY}
+            ${FSMOD_LIBRARY}
     )
 else()
     target_link_libraries(fives
             ${WRENCH_LIBRARY}
             ${SimGrid_LIBRARY}
             ${YAML_CPP_LIBRARY}
+            ${FSMOD_LIBRARY}
     )
 endif()
 
@@ -96,6 +118,7 @@ if(GTEST_LIBRARY)
       ${SimGrid_LIBRARY}
       ${ZMQ_LIBRARY}
       ${YAML_CPP_LIBRARY}
+      ${FSMOD_LIBRARY}
       pthread # Necessary on debian for some reason
   )
   else()
@@ -104,6 +127,7 @@ if(GTEST_LIBRARY)
       ${WRENCH_LIBRARY}
       ${SimGrid_LIBRARY}
       ${YAML_CPP_LIBRARY}
+      ${FSMOD_LIBRARY}
       pthread # Necessary on Debian for some reason
     )
   endif()
