Working towards a nice CMakeLists that builds every important dependency from source, inside the ./external/ directory (with build directories insides the sources and the ability to work on the dependencies code at the same time) ; updating .gitignore accordingly (external should not be committed, ever) ; adding some configs and notebook updates that I was late to commit..

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,50 +1,137 @@
-cmake_minimum_required(VERSION 3.18)
-message(STATUS "Cmake version ${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION}.${CMAKE_PATCH_VERSION}")
-
+cmake_minimum_required(VERSION 3.14)
 project(fives)
+
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
+# Module includes
+include(FetchContent)
+include(ExternalProject)
+
+# Fives version
 set(FIVES_VERSION_MAJOR "0")
-set(FIVES_VERSION_MINOR "0")
-set(FIVES_VERSION_PATCH "2")
-set(FIVES_VERSION_EXTRA "dev")
+set(FIVES_VERSION_MINOR "1")
+set(FIVES_VERSION_PATCH "0")
 
-add_definitions("-Wall -Wno-unused-variable -Wno-unused-private-field")
+# Commit/tag for each dependency to build from source
+set(NLOHMANNJSON_GIT_REF "v3.11.3")
+set(YAMLCPP_GIT_REF "0.8.0")
+set(GOOGLETEST_GIT_REF "main")                  # googletest recommands to  always use the latest commit on main
+set(SIMGRID_GIT_REF "v3.36")
+set(FSMOD_GIT_REF "v0.2")                       # or maybe we should use 'main'
+set(WRENCH_GIT_REF "v2.5")
 
-if (ENABLE_BATSCHED)
-    add_definitions(-DENABLE_BATSCHED)
-endif ()
+# Prepare and set placeholder for downloading / building / installing external dependencies such as SimGrid and WRENCH
+set(EXTERNAL_DIR ${CMAKE_SOURCE_DIR}/external CACHE PATH "Directory for external dependencies")
+set(LOCAL_INSTALL_DIR ${EXTERNAL_DIR}/install_deps CACHE PATH "Local installation directory for dependencies")
+file(MAKE_DIRECTORY ${EXTERNAL_DIR})
+file(MAKE_DIRECTORY ${LOCAL_INSTALL_DIR})
 
-set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/CMakeModules/")
+# Number of cores to use to build projects.
+set(NUM_CORES "5") 
 
-# Default to release build
-if(NOT CMAKE_BUILD_TYPE)
-    set(CMAKE_BUILD_TYPE Release)
+#### Setup dependencies
+# -> Boost is supposed to be installed system-wide by the user (outside of this repository),
+#    because it's very heavy and not version-critical
+# -> Similarly, nlohmann/json, yaml-cpp and GTest are added to the project via simple FetchContent
+#    because we don't need to access/modify/rebuild these sources during dev
+# -> Lastly, SimGrid, FSMod and WRENCH are added via ExternalProject, so that we have full control over
+#    their sources and are able to update / rebuild them manually if needed.
+# Note that some optional dependencies (for instance for WRENCH) are not required by this project and thus ignored.
+
+# Find Boost (and silencing a warning coming from a deprecated FindBoost module)
+if(POLICY CMP0167)
+  cmake_policy(SET CMP0167 NEW)
 endif()
-
-find_package(SimGrid REQUIRED)
 find_package(Boost REQUIRED)
 
-if (DEFINED FSMOD_PATH)
-    if (NOT EXISTS "${FSMOD_PATH}")
-        message(FATAL_ERROR "The specified FSMOD_PATH doesn't exit")
-    else()
-        file(GLOB LIBFSMOD_FILES
-                "${FSMOD_PATH}/liblibfsmod.so"
-                "${FSMOD_PATH}/lib/libfsmod.dylib"
-                )
-        if (NOT LIBFSMOD_FILES)
-            message(FATAL_ERROR "The specified FSMOD_PATH doesn't seem to contain a valid FSMod installation")
-        else()
-            set(CMAKE_PREFIX_PATH ${FSMOD_PATH} ${CMAKE_PREFIX_PATH})
-        endif()
-    endif()
-endif()
-#find_package(FSMod REQUIRED)
+# nlohmann/json - no need to manually rebuild during dev, so we don't care where cmake builds and install this
+FetchContent_Declare(
+    json
+    GIT_REPOSITORY      https://github.com/nlohmann/json/
+    GIT_TAG             ${NLOHMANNJSON_GIT_REF}
+)
+FetchContent_MakeAvailable(json)
 
+# jbeder/yaml-cpp - no need to manually rebuild during dev, so we don't care where cmake builds and install this
+FetchContent_Declare(
+    yaml
+    GIT_REPOSITORY      https://github.com/jbeder/yaml-cpp
+    GIT_TAG             ${YAMLCPP_GIT_REF}
+)
+FetchContent_MakeAvailable(yaml)
 
-# include directories for dependencies and WRENCH libraries
-include_directories(include/ /usr/local/include /opt/local/include /opt/simgrid/include /usr/local/include/wrench ${SimGrid_INCLUDE_DIR} ${Boost_INCLUDE_DIR})
+# Google test - no need to manually rebuild during dev, so we don't care where cmake builds and install this
+FetchContent_Declare(
+    gtest
+    GIT_REPOSITORY      https://github.com/google/googletest
+    GIT_TAG             ${GOOGLETEST_GIT_REF}
+)
+FetchContent_MakeAvailable(gtest)
 
-# source files
+# SimGrid - builds in source, as mandated by the project at this time
+ExternalProject_Add(
+    simgrid
+    GIT_REPOSITORY https://framagit.org/simgrid/simgrid.git
+    GIT_TAG        ${SIMGRID_GIT_REF}
+    GIT_SHALLOW    ON                                                   # Comment out if entire repository is required instead
+    SOURCE_DIR     ${EXTERNAL_DIR}/simgrid
+    INSTALL_DIR    ${LOCAL_INSTALL_DIR}
+    CMAKE_ARGS     -DCMAKE_INSTALL_PREFIX=${LOCAL_INSTALL_DIR}
+    BUILD_COMMAND ${CMAKE_COMMAND} --build . --parallel ${NUM_CORES}    # Force multicore build
+    BUILD_IN_SOURCE ON
+)
+add_library(simgrid_lib SHARED IMPORTED)
+set_target_properties(simgrid_lib PROPERTIES
+    IMPORTED_LOCATION ${LOCAL_INSTALL_DIR}/lib/libsimgrid.so
+    INTERFACE_INCLUDE_DIRECTORIES ${LOCAL_INSTALL_DIR}/include
+)
+
+# SimGrid file-system-module (fsmod) - builds in separate `build` dir, which requires a custom CONFIGURE_COMMAND
+ExternalProject_Add(
+    fsmod
+    GIT_REPOSITORY https://github.com/simgrid/file-system-module
+    GIT_TAG        ${FSMOD_GIT_REF}
+    GIT_SHALLOW    ON                                                                   # Comment out if entire repository is required instead
+    SOURCE_DIR     ${EXTERNAL_DIR}/fsmod
+    INSTALL_DIR    ${LOCAL_INSTALL_DIR}
+    BINARY_DIR     ${EXTERNAL_DIR}/fsmod/build
+    PATCH_COMMAND  ${CMAKE_COMMAND} -E make_directory ${EXTERNAL_DIR}/fsmod/build       # Add our build directory to the local sources
+    CMAKE_ARGS     -DCMAKE_INSTALL_PREFIX=${LOCAL_INSTALL_DIR}
+    BUILD_COMMAND ${CMAKE_COMMAND} --build . --parallel ${NUM_CORES}                    # Force multicore build
+)
+add_library(fsmod_lib SHARED IMPORTED)
+set_target_properties(fsmod_lib PROPERTIES
+    IMPORTED_LOCATION ${LOCAL_INSTALL_DIR}/lib/libfsmod.so
+    INTERFACE_INCLUDE_DIRECTORIES ${LOCAL_INSTALL_DIR}/include
+)
+
+# WRENCH - builds in separate `build` dir, which requires a custom CONFIGURE_COMMAND
+ExternalProject_Add(
+    wrench
+    GIT_REPOSITORY https://github.com/wrench-project/wrench
+    GIT_TAG        ${WRENCH_GIT_REF}
+    GIT_SHALLOW    ON                                                                   # Comment out if entire repository is required instead
+    DEPENDS        fsmod simgrid
+    SOURCE_DIR     ${EXTERNAL_DIR}/wrench
+    INSTALL_DIR    ${LOCAL_INSTALL_DIR}
+    BINARY_DIR     ${EXTERNAL_DIR}/wrench/build
+    PATCH_COMMAND  ${CMAKE_COMMAND} -E make_directory ${EXTERNAL_DIR}/wrench/build      # Add our build directory to the local sources
+    CMAKE_ARGS     -DCMAKE_INSTALL_PREFIX=${LOCAL_INSTALL_DIR} -DFSMOD_PATH=${LOCAL_INSTALL_DIR} -DSimGrid_PATH=${LOCAL_INSTALL_DIR}
+    BUILD_COMMAND  ${CMAKE_COMMAND} --build . --parallel ${NUM_CORES}                   # Force multicore build
+)
+add_library(wrench_lib STATIC IMPORTED)
+set_target_properties(wrench_lib PROPERTIES
+    IMPORTED_LOCATION ${LOCAL_INSTALL_DIR}/lib/libwrench.a
+    INTERFACE_INCLUDE_DIRECTORIES ${LOCAL_INSTALL_DIR}/include
+)
+
+# Specific target for dependencies, so that they can be build apart from fives (and the opposite as well)
+add_custom_target(dependencies DEPENDS nlohmann_json::nlohmann_json gtest yaml-cpp simgrid fsmod wrench)
+
+# Main target
+
+# Set the list of source files
 set(SOURCE_FILES
         include/Controller.h
         include/Simulator.h
@@ -61,80 +148,32 @@ set(SOURCE_FILES
         src/JobDefinition.cpp
         src/ConfigDefinition.cpp
         src/Utils.cpp
+        src/main.cpp
 )
 
-# Wrench library and dependencies
-find_library(WRENCH_LIBRARY NAMES wrench)
-find_library(YAML_CPP_LIBRARY NAMES yaml-cpp)
-find_library(ZMQ_LIBRARY NAMES zmq)
-find_library(FSMOD_LIBRARY NAMES fsmod)
+# Necessary because of the 'ExternalProject'-based dependencies
+include_directories(${LOCAL_INSTALL_DIR}/include)
+link_directories(${LOCAL_INSTALL_DIR}/lib)
 
-# generating the executable
-set(CMAKE_CXX_STANDARD 17)
-add_executable(fives src/main.cpp ${SOURCE_FILES})
-
-if (ENABLE_BATSCHED)
-    target_link_libraries(fives
-            ${WRENCH_LIBRARY}
-            ${SimGrid_LIBRARY}
-            ${ZMQ_LIBRARY}
-            ${YAML_CPP_LIBRARY}
-            ${FSMOD_LIBRARY}
-    )
-else()
-    target_link_libraries(fives
-            ${WRENCH_LIBRARY}
-            ${SimGrid_LIBRARY}
-            ${YAML_CPP_LIBRARY}
-            ${FSMOD_LIBRARY}
-    )
-endif()
-
-set_target_properties(fives PROPERTIES COMPILE_FLAGS "-O3")
-install(TARGETS fives DESTINATION bin)
-
-
-find_library(GTEST_LIBRARY NAMES gtest)
-if(GTEST_LIBRARY)
-
-  add_definitions(-DGTEST_USED)
-
-  add_executable(
-    unit_tests
-    EXCLUDE_FROM_ALL
-    test/main.cpp
-    test/FunctionalTest.cpp
-    test/AllocationStrategyTest.cpp
-    test/UtilsTest.cpp
-    test/include/TestWithFork.h
-    test/include/UniqueTmpPathPrefix.h
-    test/include/TestConstants.h
+add_executable(
+    fives 
     ${SOURCE_FILES}
-  )
-  if (ENABLE_BATSCHED)
-    target_link_libraries(unit_tests
-      ${GTEST_LIBRARY}
-      ${WRENCH_LIBRARY}
-      ${SimGrid_LIBRARY}
-      ${ZMQ_LIBRARY}
-      ${YAML_CPP_LIBRARY}
-      ${FSMOD_LIBRARY}
-      pthread # Necessary on debian for some reason
-  )
-  else()
-    target_link_libraries(unit_tests
-      ${GTEST_LIBRARY}
-      ${WRENCH_LIBRARY}
-      ${SimGrid_LIBRARY}
-      ${YAML_CPP_LIBRARY}
-      ${FSMOD_LIBRARY}
-      pthread # Necessary on Debian for some reason
-    )
-  endif()
+) 
+set_target_properties(fives PROPERTIES COMPILE_FLAGS "-O3")
+target_link_libraries(
+        fives
+        PRIVATE
+        wrench_lib
+        simgrid_lib
+        fsmod_lib
+        yaml-cpp
+)
 
+target_include_directories(
+        fives
+        PRIVATE
+        ./include/
+        ${LOCAL_INSTALL_DIR}/include
+)
 
-  set_target_properties(unit_tests PROPERTIES COMPILE_FLAGS "-g -O0 --coverage")
-  set_target_properties(unit_tests PROPERTIES LINK_FLAGS "--coverage")
-  add_custom_command(TARGET unit_tests COMMAND find . -name *.gcda -delete)
-
-endif()
+install(TARGETS fives DESTINATION bin)
