CMakeLists.txt ready : conf/build can use either system or in-source libraries and both fives and its unit tests can be built with these two configurations ; CHANGELOG and README updated accordingly

--- a/include/BuildInfo.h.in
+++ b/include/BuildInfo.h.in
@@ -7,6 +7,8 @@
 const std::string fives_version = "@FIVES_RELEASE_VERSION@";
 // SIMGRID VERSION
 const std::string simgrid_version = "@SIMGRID_GIT_REF@";
+// FSMOD VERSION
+const std::string fsmod_version = "@FSMOD_GIT_REF@";
 // WRENCH VERSION
 const std::string wrench_version = "@WRENCH_GIT_REF@";
 // BUILD TIME
