Fixing various settings in vscode ; Adding a 'BEFORE' argument to target_include_directories in CMake for local dependencies builds (so that the local include folders are preferred even when dependencies are also installed system wide) ; minor typo fixes in src

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,6 @@ results/*.pdf
 results/.python-version
 results/sim_time_plots
 profiling_temp/
+
+*.ipynb filter=strip-notebook-output
+include/BuildInfo.h
