--- a/configs/bluewaters.yml
+++ b/configs/bluewaters.yml
@@ -7,8 +7,8 @@
 # Compute side has 4392 nodes in a Dragonfly topo (we have slightly more in the end, at ~4600 nodes)
 
 general:
-  config_name: StorAlloc_Theta_Lustre_fs0
-  config_version: 0.0.1
+  config_name: Fives_BLuewaters
+  config_version: 0.1.0
   max_stripe_size: 100048576          # Max size for allocation stripes (in bytes) (when striping is done at CSS level, so not used here)
   preload_percent: 0.0
   walltime_extension: 1.0             # The final walltime passed to the batch sched will be walltime * walltime_extension
@@ -23,9 +23,9 @@ storage:
   write_variability: 1.0
   non_linear_coef_read: 0.85          # read AND write set to 1.0 to deactivate
   non_linear_coef_write: 0.75
-  nb_files_per_read: 2
-  nb_files_per_write: 2
-  read_node_thres: 50000000
+  nb_files_per_read: 0                # unused
+  nb_files_per_write: 0               # unused
+  read_node_thres: 50000000     
   write_node_thres: 40000000
   static_read_overhead_seconds: 0
   static_write_overhead_seconds: 0
@@ -34,48 +34,35 @@ storage:
   write_bytes_copy_thres:   2000000000 # Not doing copy *out* if job writes more than 2GB
   cleanup_threshold: 0.75
   disk_templates:
-    - &raid_OSS
-      id: raid_OSS
-      capacity: 164000    # GB (~ 164 TB -> 41*6TB dRAID, for a total of 10PB on 56 OSS)
-      read_bw: 2500       # MBps   theoretical 6GBps peak performance (https://www.alcf.anl.gov/sites/default/files/2022-08/CompPerfWorkshop_May2022_IOopt_mcpheeters.pdf)
-      write_bw: 1400      # MBps 
-      mount_prefix: /dev/hdd
+    - &raid_OST
+      id: raid_OST
+      capacity: 16000    # GB 
+      read_bw: 4440       # MBps   theoretical 6GBps peak performance (https://www.alcf.anl.gov/sites/default/files/2022-08/CompPerfWorkshop_May2022_IOopt_mcpheeters.pdf)
+      write_bw: 4120      # MBps 
+      mount_prefix: /dev/mdraid
   node_templates:
-    - &node_capa
+    - &node_OSS
       id: lustre_OSS
       disks:
-        - quantity: 1
-          template: *raid_OSS
+        - quantity: 4
+          template: *raid_OST
   nodes:
-    - quantity: 56
-      template: *node_capa
-permanent_storage:
-  read_bw: 20GBps   # ALCF Tape archive cache speed is 90Gbps / and also the link between HDR and FDR is 100GBps
-  write_bw: 10GBps  # Same
-  capacity: 3050TB  # Tape capacity is 305 PB
-  mount_prefix: /dev/disk0
+    - quantity: 360
+      template: *node_OSS
+permanent_storage:  # Using ~ characteristics of the project/ lustre (10x smaller than scratch)
+  read_bw: 100GBps   
+  write_bw: 100GBps  
+  capacity: 2000TB  # Tape capacity is 305 PB
+  mount_prefix: /dev/project
   read_path: read
   write_path: write
   disk_id: perm_disk0
   io_buffer_size: 536870912B
-dragonfly:          # See https://simgrid.org/doc/latest/Platform_examples.html - Dragonfly
-  groups: 12        # Entire Dragonfly zone (should be 4392 nodes in total, we use slightly more)
-  group_links: 1
-  chassis: 6        # Per group
-  chassis_links: 1
-  routers: 16       # Per chassis
-  router_links: 1
-  nodes: 4          # Per router
-  core_count: 64    # Compute node core count - unused
-  ram: 192          # GB Compute node ram
-  flops: 2Tf      # Flops for each compute node
-  max_compute_nodes: 4392
-  node_local_storage:
-    enabled: no     # Not implemented yet anyway
-    nb_disks: 1
-    capacity: 128 # GB
-    read_bw: 1000 # MBps      # https://docs.alcf.anl.gov/data-management/filesystem-and-storage/file-systems/
-    write_bw: 500 # MBps      # https://www.alcf.anl.gov/sites/default/files/2022-08/CompPerfWorkshop_May2022_IOopt_mcpheeters.pdf
+torus:
+  core_count: 64
+  flops: 300Gf
+  max_compute_nodes: 13432
+  ram: 32
 allocator: lustre
 lustre:
   lq_threshold_rr: 43     # lustre default
